# mc-optimiser

./: .gitignore  Makefile  pyproject.toml  readme.md  setup.cfg  shop.ipynb
mc_optimiser/models/: base.py  simple_store.py
tests/: test_simple_store.py
